Update theme colour

--- a/canopus/src/custom.scss
+++ b/canopus/src/custom.scss
@@ -1,6 +1,12 @@
 // Override default variables before the import
 $body-bg: #adb5bd;
 
+$navbar-light-brand-color: white;
+$navbar-light-active-color: white;
+$navbar-light-color: white;
+
+$card-cap-color: white;
+
 $theme-colors: (
   "primary": #55ab8c
 );
