Improve search styles

--- a/canopus/src/custom.scss
+++ b/canopus/src/custom.scss
@@ -8,7 +8,8 @@ $navbar-light-color: white;
 $card-cap-color: white;
 
 $theme-colors: (
-  "primary": #55ab8c
+  "primary": #55ab8c,
+  "secondary": #cfe7df
 );
 
 // Import Bootstrap and its default variables
